--- a/ShoesAdmin/src/app/components/table-nhanvien/table-nhanvien.component.html
+++ b/ShoesAdmin/src/app/components/table-nhanvien/table-nhanvien.component.html
@@ -32,7 +32,7 @@
                     <td>{{nv.email}}</td>
                     <td>{{nv.diaChi}}</td>
                     <td>
-                      <a class="success p-0" data-original-title="" title="Cập nhật">
+                      <a class="success p-0" data-original-title="" title="Cập nhật" routerLink="/nhanvien/{{nv.id}}">
                         <i class="ft-edit-2 font-medium-3 mr-2"></i>
                       </a>
                       <a class="danger p-0" data-original-title="" title="Xóa">
