fix Detail Invoice

--- a/ShoesAdmin/src/app/components/invoice/invoice.component.html
+++ b/ShoesAdmin/src/app/components/invoice/invoice.component.html
@@ -6,7 +6,7 @@
     </div>
   </div>
   <section class="invoice-template">
-    <div class="card">
+    <div class="card" *ngIf="_detailInvoice != null">
       <div class="card-body p-3">
         <div id="invoice-template" class="card-block">
           <!-- Invoice Company Details -->
@@ -21,13 +21,13 @@
             <div class="col-6 text-right">
               <h2>THÔNG TIN HÓA ĐƠN</h2>
               <p>
-                <span class="text-muted">Mã Hóa Đơn:{{chitiet_HD.id}}</span>
-              <p>
-              <!-- <p class="pb-3">Mã Hóa Đơn:</p> -->
-              <ul class="px-0 list-unstyled">
-                <li>Tổng Tiền Thanh Toán: </li>
-                <li class="lead text-bold-800">{{chitiet_HD.tongTien}}</li>
-              </ul>
+                <span class="text-muted">Mã Hóa Đơn:{{_detailInvoice.id}}</span>
+                <p>
+                  <!-- <p class="pb-3">Mã Hóa Đơn:</p> -->
+                  <ul class="px-0 list-unstyled">
+                    <li>Tổng Tiền Thanh Toán: </li>
+                    <li class="lead text-bold-800">{{_detailInvoice.tongTien | number}} đ</li>
+                  </ul>
             </div>
           </div>
           <!-- Invoice Company Details -->
@@ -36,17 +36,17 @@
             <div class="col-sm-12 text-left">
               <p class="text-muted">Thông tin Khách hàng:</p>
             </div>
-            <div class="col-6 text-left">
+            <div class="col-6 text-left" *ngIf="_detailInvoice.khachHang != null">
               <ul class="px-0 list-unstyled">
-                <li class="text-bold-800">{{chitiet_HD.nhanVien[1].tenNhanvien}}</li>
-                <li>địa chỉ</li>
+                <li class="text-bold-800">{{_detailInvoice.khachHang.tenKhachHang}}</li>
+                <li>Địa chỉ: {{_detailInvoice.khachHang.diaChi}}</li>
               </ul>
             </div>
             <div class="col-6 text-right">
               <p>
-                <span class="text-muted">Trạng Thái :</span> {{chitiet_HD.trangThai}}</p>
+                <span class="text-muted">Trạng Thái :</span> {{_detailInvoice.trangThai}}</p>
               <p>
-                <span class="text-muted">Ngày :</span>{{chitiet_HD.ngay}}</p>
+                <span class="text-muted">Ngày :</span>{{_detailInvoice.ngay}}</p>
             </div>
           </div>
           <!--/ Invoice Customer Details -->
@@ -65,69 +65,22 @@
                     </tr>
                   </thead>
                   <tbody>
-                    <tr>  
-                      <th scope="row">{{chitiet_HD.chiTietHoaDon[0].id}}</th>
+
+                    <tr *ngFor="let detail of _detailInvoice.chiTietHoaDon">
+                      <th scope="row">{{detail.sanPham.id}}</th>
                       <td>
-                          {{chitiet_HD.tenSanPham}}
-                        <!-- <p>Create PSD for mobile APP</p>
-                        <p class="text-muted">Simply dummy text of the printing and typesetting industry.</p> -->
+                        {{detail.sanPham.tenSanPham}}
                       </td>
-                      <td class="text-right">$ 20.00/hr</td>
-                      <td class="text-right">120</td>
-                      <td class="text-right">$ 2400.00</td>
+                      <td class="text-right">{{detail.sanPham.chietKhau}}</td>
+                      <td class="text-right">{{detail.soLuong}}</td>
+                      <td class="text-right">{{detail.sanPham.donGia}}</td>
                     </tr>
-                    <tr>
-                      <th scope="row">2</th>
-                      <td>
-                        <p>iOS Application Development</p>
-                        <p class="text-muted">Pellentesque maximus feugiat lorem at cursus.</p>
-                      </td>
-                      <td class="text-right">$ 25.00/hr</td>
-                      <td class="text-right">260</td>
-                      <td class="text-right">$ 6500.00</td>
-                    </tr>
-                    <tr>
-                      <th scope="row">3</th>
-                      <td>
-                        <p>WordPress Template Development</p>
-                        <p class="text-muted">Vestibulum euismod est eu elit convallis.</p>
-                      </td>
-                      <td class="text-right">$ 20.00/hr</td>
-                      <td class="text-right">300</td>
-                      <td class="text-right">$ 6000.00</td>
-                    </tr>
+
                   </tbody>
                 </table>
               </div>
             </div>
             <div class="row">
-               <div class="col-md-6 col-sm-12 text-left">
-                <!-- <p class="lead">Phương thức thanh toán:</p> -->
-                <div class="row">
-                  <div class="col-12">
-                    <!-- <table class="table table-borderless table-sm">
-                      <tbody>
-                        <tr>
-                          <td>Tên ngân hàng:</td>
-                          <td class="text-right">ABC Bank, USA</td>
-                        </tr>
-                        <tr>
-                          <td>Tên Khách hàng:</td>
-                          <td class="text-right">Amanda Orton</td>
-                        </tr>
-                         <tr>
-                          <td>Ngày:</td>
-                          <td class="text-right">FGS165461646546AA</td>
-                        </tr> \
-                        <tr>
-                          <td>Nội dung:</td>
-                          <td class="text-right">BTNPP34</td>
-                        </tr>
-                      </tbody>
-                    </table> -->
-                  </div>
-                </div>
-              </div> 
               <div class="col-md-6 col-sm-12">
                 <p class="lead">Hóa đơn thanh toán</p>
                 <div class="table-responsive">
@@ -135,7 +88,7 @@
                     <tbody>
                       <tr>
                         <td>Tổng tiền sản phẩm</td>
-                        <td class="text-right">$ 14,900.00</td>
+                        <td class="text-right">{{_sumMoney}}</td>
                       </tr>
                       <tr>
                         <td>Chiết khấu (12%)</td>
@@ -145,14 +98,6 @@
                         <td class="text-bold-800">Tổng tiền thanh toán</td>
                         <td class="text-bold-800 text-right"> $ 16,688.00</td>
                       </tr>
-                      <!-- <tr>
-                        <td>Payment Made</td>
-                        <td class="pink text-right">(-) $ 4,688.00</td>
-                      </tr>
-                      <tr class="bg-grey bg-lighten-4">
-                        <td class="text-bold-800">Balance Due</td>
-                        <td class="text-bold-800 text-right">$ 12,000.00</td>
-                      </tr> -->
                     </tbody>
                   </table>
                 </div>
